--- a/assets/styles/tailwind.pcss
+++ b/assets/styles/tailwind.pcss
@@ -6,21 +6,21 @@
   @font-face {
     font-family: Roboto;
     font-weight: 400;
-    src: url(/fonts/Roboto-Regular.ttf)
+    src: url(fonts/Roboto-Regular.ttf)
   }
   @font-face {
     font-family: Barlow;
     font-weight: 500;
-    src: url(/fonts/Barlow-Medium.ttf)
+    src: url(fonts/Barlow-Medium.ttf)
   }
   @font-face {
     font-family: Barlow;
     font-weight: 800;
-    src: url(/fonts/Barlow-ExtraBold.ttf)
+    src: url(fonts/Barlow-ExtraBold.ttf)
   }
   @font-face {
     font-family: Barlow;
     font-weight: 900;
-    src: url(/fonts/Barlow-Black.ttf)
+    src: url(fonts/Barlow-Black.ttf)
   }
 }
