--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <section style="background-image: url({{"images/bg.png"|absURL}});" class="bg-center bg-cover bg-no-repeat px-4">
-  <div class="w-full mx-auto lg:w-10/12 py-16">
+  <div class="w-full mx-auto md:w-10/12 py-16">
     <div class="w-full text-center lg:w-1/2 lg:ml-auto">
       <h1 class="font-black text-4xl uppercase text-indigo-dye leading-tight lg:text-5xl xl:text-6xl">
         El <span class="text-tart-orange">Estatuto de la oposición</span> en Colombia
