--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,1 +1,37 @@
-<footer></footer>
+<footer class="bg-indigo-dye px-4 py-12 text-white">
+  <div class="w-full mx-auto md:w-10/12">
+    <div class="grid gap-12 md:grid-cols-3 md:gap-12 md:items-center">
+      <img class="mx-auto w-40" src="{{"images/logo-cne-blanco.png"|absURL}}" alt="Logo Consejo Nacional Electoral Colombia">
+      <img class="mx-auto" src="{{"images/logo-nimd.svg"|absURL}}" alt="Logo Netherlands Institute for Multiparty Democracy">
+      <img class="mx-auto w-40" src="{{"images/logo-ds-blanco.png"|absURL}}" alt="Logo Datasketch">
+    </div>
+    <div class="grid gap-8 font-medium mt-12 sm:gap-4 sm:grid-cols-3 sm:items-end md:gap-12">
+      <p class="text-center text-xs">Ilustraciones por <a href="" class="underline" target="_blank" rel="noopener noreferrer">Marina Fedoseenko</a> de <a href="" class="underline" target="_blank" rel="noopener noreferrer">Icons8</a></p>
+      <div class="text-xs font-medium text-center">
+        <div class="space-x-4 flex items-center justify-center">
+          <img class="w-8" src="{{"images/cc-1.png"|absURL}}" alt="">
+          <img class="w-8" src="{{"images/cc-2.png"|absURL}}" alt="">
+          <img class="w-8" src="{{"images/cc-3.png"|absURL}}" alt="">
+        </div>
+        <p class="mt-2">Todo el material en esta página, cuando no se indique lo contrario, es CC-BY-SA. Si reusas o adaptas recursos de esta página por favor vincúlalos y referéncialos.</p>
+      </div>
+      <div class="text-center">
+        <p class="font-bold uppercase text-lg">Comparte</p>
+        <div class="flex space-x-4 items-center justify-center mt-4">
+          <a href="" target="_blank" rel="noopener noreferrer">
+            <img class="" src="{{"images/fb-white.png"|absURL}}" alt="">
+          </a>
+          <a href="" target="_blank" rel="noopener noreferrer">
+            <img class="" src="{{"images/ig-white.png"|absURL}}" alt="">
+          </a>
+          <a href="" target="_blank" rel="noopener noreferrer">
+            <img class="" src="{{"images/tw-white.png"|absURL}}" alt="">
+          </a>
+          <a href="">
+            <img class="" src="{{"images/mail-white.png"|absURL}}" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
