--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,7 +14,7 @@
   </div>
 </section>
 <!---->
-<section class="bg-white px-4 py-12">
+<section class="bg-white px-4 py-12" id="estatuto">
   <div class="w-full mx-auto flex flex-col md:w-10/12 md:flex-row md:items-center md:space-x-8">
     <div class="w-full md:w-1/2 lg:w-2/3">
       <div class="max-w-md">
@@ -29,7 +29,7 @@
   </div>
 </section>
 <!---->
-<section class="bg-cultured px-4 py-12">
+<section class="bg-cultured px-4 py-12" id="proyecto">
   <div class="w-full mx-auto flex flex-col-reverse md:w-10/12 md:flex-row md:items-center md:space-x-8">
     <div class="w-full md:w-1/2 lg:w-2/3">
       <img src="{{"images/graphic-2.png"|absURL}}" alt="">
@@ -43,7 +43,7 @@
 </section>
 <!---->
 <!---->
-<section class="bg-cultured px-4 py-12">
+<section class="bg-cultured px-4 py-12" id="descarga">
   <div class="w-full mx-auto flex flex-col-reverse md:w-10/12 md:flex-row md:items-center md:space-x-8">
     <div class="w-full md:w-1/2 lg:w-2/3">
       <img src="{{"images/graphic-3.png"|absURL}}" alt="">
