add links to icons8

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,7 @@
       <img class="mx-auto w-40" src="{{"images/logo-ds-blanco.png"|absURL}}" alt="Logo Datasketch">
     </div>
     <div class="grid gap-8 font-medium mt-12 sm:gap-4 sm:grid-cols-3 sm:items-end md:gap-12">
-      <p class="text-center text-xs">Ilustraciones por <a href="" class="underline" target="_blank" rel="noopener noreferrer">Marina Fedoseenko</a> de <a href="" class="underline" target="_blank" rel="noopener noreferrer">Icons8</a></p>
+      <p class="text-center text-xs">Ilustraciones por <a href="https://icons8.com/illustrations/author/5e7e24ce01d0360013bb7479" class="underline" target="_blank" rel="noopener noreferrer">Marina Fedoseenko</a> de <a href="https://icons8.com/" class="underline" target="_blank" rel="noopener noreferrer">Icons8</a></p>
       <div class="text-xs font-medium text-center">
         <div class="space-x-4 flex items-center justify-center">
           <img class="w-8" src="{{"images/cc-1.png"|absURL}}" alt="">
