--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,6 +42,12 @@
   </div>
 </section>
 <!---->
+<section class="py-12 bg-white">
+  <h3 class="text-3xl text-indigo-dye uppercase font-black lg:text-4xl text-center">Explora los datos</h3>
+  <div class="h-screen">
+    <iframe class="w-full h-full" src="https://datasketch.shinyapps.io/oposicion-politica-app/" frameborder="0"></iframe>
+  </div>
+</section>
 <!---->
 <section class="bg-cultured px-4 py-12" id="descarga">
   <div class="w-full mx-auto flex flex-col-reverse md:w-10/12 md:flex-row md:items-center md:space-x-8">
