add video slider

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {{ $styles := resources.Get "styles/tailwind.pcss" | toCSS | postCSS | minify }}
   <link rel="stylesheet" href="{{ $styles.Permalink }}">
+  <link rel="stylesheet" href="{{ "vendors/swiper/swiper.min.css" | absURL }}">
   {{ if .Title }}
     <title>{{ .Title }}</title>
   {{ else }}
@@ -22,6 +23,7 @@
   </main>
   {{ partial "footer.html" . }}
   <script src="{{ "vendors/moveto/moveTo.min.js" | absURL }}"></script>
+  <script src="{{ "vendors/swiper/swiper.min.js" | absURL }}"></script>
   {{ $default := resources.Get "js/default.js" | minify }}
   <script src="{{ $default.Permalink }}"></script>
 </body>
