--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,7 +42,7 @@
   </div>
 </section>
 <!---->
-<section class="py-12 bg-white">
+<section class="py-12 bg-white" id="visualiza">
   <h3 class="text-3xl text-indigo-dye uppercase font-black lg:text-4xl text-center">Explora los datos</h3>
   <div class="h-screen">
     <iframe class="w-full h-full" src="https://datasketch.shinyapps.io/oposicion-politica-app/" frameborder="0"></iframe>
@@ -58,6 +58,32 @@
       <h3 class="text-3xl text-indigo-dye uppercase font-black lg:text-4xl">Descarga</h3>
       <p class="text-oxford-blue mt-6 font-roboto text-sm lg:text-base">Los datos que fueron utilizados en el visualizador están disponibles para que la ciudadanía los descargue, pueda verificar la información y pueda realizar sus propias visualizaciones o responder sus propias preguntas.</p>
       <a href="" class="inline-block mt-6 uppercase bg-tart-orange text-white rounded font-bold text-lg px-3 py-2 lg:text-xl">Descarga los datos</a>
+    </div>
+  </div>
+</section>
+<!---->
+<section class="py-12 px-4 bg-white">
+  <h3 class="text-3xl text-indigo-dye uppercase font-black lg:text-4xl text-center">Profundiza</h3>
+  <div class="w-full mx-auto lg:w-11/12">
+    <div class="swiper-container mt-12">
+      <div class="swiper-wrapper pb-8">
+        <div class="swiper-slide">
+          <div class="w-full relative h-0" style="padding-bottom: 56.25%">
+            <iframe class="w-full absolute top-0 left-0 h-full" src="https://www.youtube.com/embed/_cyCOr6aGLI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="w-full relative h-0" style="padding-bottom: 56.25%">
+            <iframe class="w-full absolute top-0 left-0 h-full" src="https://www.youtube.com/embed/V_kIbmhieLM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="w-full relative h-0" style="padding-bottom: 56.25%">
+            <iframe class="w-full absolute top-0 left-0 h-full" src="https://www.youtube.com/embed/hN2QbKZvAvw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-pagination"></div>
     </div>
   </div>
 </section>
