--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,4 +1,4 @@
-<nav class="h-20 bg-white px-4 sticky top-0">
+<nav class="h-20 bg-white px-4 sticky top-0 z-10">
   <div class="flex items-center justify-between lg:hidden">
     <a href="{{.Site.BaseURL}}" class="js-trigger">
       <img class="h-20" src="{{"images/logo-cne.jpg" | absURL }}" alt="Logo CNE">
@@ -19,7 +19,7 @@
     <a href="" class="tracking-wide js-trigger">Inicio</a>
     <a href="#estatuto" class="tracking-wide js-trigger">El Estatuto</a>
     <a href="#proyecto" class="tracking-wide js-trigger">El proyecto</a>
-    <a href="" class="tracking-wide js-trigger">Visualizador</a>
+    <a href="#visualiza" class="tracking-wide js-trigger">Visualizador</a>
     <a href="#descarga" class="tracking-wide js-trigger">Descarga de datos</a>
     <div class="flex items-center space-x-4">
       <a href="#" target="_blank" rel="noopener noreferrer">
