add link to YT channel

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -62,29 +62,32 @@
   </div>
 </section>
 <!---->
-<section class="py-12 px-4 bg-white">
-  <h3 class="text-3xl text-indigo-dye uppercase font-black lg:text-4xl text-center">Profundiza</h3>
-  <div class="w-full mx-auto lg:w-11/12">
-    <div class="swiper-container mt-12">
-      <div class="swiper-wrapper pb-8">
-        <div class="swiper-slide">
-          <div class="w-full relative h-0" style="padding-bottom: 56.25%">
-            <iframe class="w-full absolute top-0 left-0 h-full" src="https://www.youtube.com/embed/_cyCOr6aGLI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<section class="py-12 px-4 bg-white" id="profundiza">
+  <div class="text-center">
+    <h3 class="text-3xl text-indigo-dye uppercase font-black lg:text-4xl">Profundiza</h3>
+    <div class="w-full mx-auto lg:w-11/12">
+      <div class="swiper-container mt-12">
+        <div class="swiper-wrapper pb-8">
+          <div class="swiper-slide">
+            <div class="w-full relative h-0" style="padding-bottom: 56.25%">
+              <iframe class="w-full absolute top-0 left-0 h-full" src="https://www.youtube.com/embed/_cyCOr6aGLI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="w-full relative h-0" style="padding-bottom: 56.25%">
+              <iframe class="w-full absolute top-0 left-0 h-full" src="https://www.youtube.com/embed/V_kIbmhieLM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="w-full relative h-0" style="padding-bottom: 56.25%">
+              <iframe class="w-full absolute top-0 left-0 h-full" src="https://www.youtube.com/embed/hN2QbKZvAvw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
           </div>
         </div>
-        <div class="swiper-slide">
-          <div class="w-full relative h-0" style="padding-bottom: 56.25%">
-            <iframe class="w-full absolute top-0 left-0 h-full" src="https://www.youtube.com/embed/V_kIbmhieLM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="w-full relative h-0" style="padding-bottom: 56.25%">
-            <iframe class="w-full absolute top-0 left-0 h-full" src="https://www.youtube.com/embed/hN2QbKZvAvw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-        </div>
+        <div class="swiper-pagination"></div>
       </div>
-      <div class="swiper-pagination"></div>
     </div>
+    <p class="underline font-roboto text-oxford-blue mt-4"><a href="https://www.youtube.com/channel/UC5SN2eL-saQcL4gzAB-eHUQ" target="_blank" rel="noopener noreferrer">Conoce más contenido</a></p>
   </div>
 </section>
 {{ end }}
