--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -21,6 +21,7 @@
     <a href="#proyecto" class="tracking-wide js-trigger">El proyecto</a>
     <a href="#visualiza" class="tracking-wide js-trigger">Visualizador</a>
     <a href="#descarga" class="tracking-wide js-trigger">Descarga de datos</a>
+    <a href="#profundiza" class="tracking-wide js-trigger">Profundiza</a>
     <div class="flex items-center space-x-4">
       <a href="#" target="_blank" rel="noopener noreferrer">
         <img src="{{"images/fb.png" | absURL}}" alt="">
