--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,7 +20,7 @@
       <div class="max-w-md">
         <h3 class="text-3xl text-indigo-dye uppercase font-black lg:text-4xl">El Estatuto</h3>
         <p class="text-oxford-blue mt-6 font-roboto text-sm lg:text-base">Con la expedición del Estatuto de Oposición (Ley 1909 de 2018), todos los partidos y movimientos políticos están en la obligación de realizar su declaración política frente a los gobiernos nacional, departamental, distrital y municipal en ejercicio. En ella, deben decidir si quieren hacer parte del gobierno, ser independientes o de oposición.</p>
-        <a href="" class="inline-block mt-6 uppercase bg-tart-orange text-white rounded font-bold text-lg px-3 py-2 lg:text-xl">Conoce más aquí</a>
+        <a href="https://dapre.presidencia.gov.co/normativa/normativa/LEY%201909%20DEL%209%20DE%20JULIO%20DE%202018.pdf" target="_blank" class="inline-block mt-6 uppercase bg-tart-orange text-white rounded font-bold text-lg px-3 py-2 lg:text-xl">Conoce más aquí</a>
       </div>
     </div>
     <div class="w-full md:w-1/2 lg:w-1/3">
@@ -44,6 +44,21 @@
 <!---->
 <section class="py-12 bg-white" id="visualiza">
   <h3 class="text-3xl text-indigo-dye uppercase font-black lg:text-4xl text-center">Explora los datos</h3>
+  <div class="font-roboto text-oxford-blue text-sm lg:text-base space-y-4 mt-6 w-full md:w-10/12 mx-auto">
+    <p>
+      Esta herramienta de exploración de datos, está basada en dos tipos de fuentes de información: las declaratorias de oposición, gobierno e independencia que ha realizado cada partido político en cada nivel territorial de Colombia (nacional, departamental y municipal), y las coaliciones en los diferentes niveles que han realizado los partidos políticos y las respectivas declaratorias de oposición e independencia a estas coaliciones.
+    </p>
+    <p>
+      Por eso la información se puede encontrar a partir de tres preguntas, la primera de ellas busca dar a conocer los partidos políticos que se declaran en oposición, independencia y gobierno, la segunda los partidos que más se han declarado en oposición, independencia y gobierno, y la tercera refleja las distintas relaciones existentes entre una coalición y los partidos que se declaran en independencia y oposición en los diferentes niveles.
+    </p>
+    <p>
+      Es posible explorar la información a través de distintos filtros: por niveles territoriales, declaratorias, partidos políticos, fechas de publicación de las declaratorias, entre otros. Y además es posible conocer la información gráficamente a través de mapas geográficos, gráficos de tortas, gráficos de barras, entre otros.
+    </p>
+    <p>
+      Los mapas geográficos, se grafican a partir del número de declaratorias, donde el color azul claro indica 1 declaratoria y va aumentando hasta el púrpura que indica 4 declaratorias (el orden de los colores es ascendente y entre más intenso mayor cantidad de declaratorias) y el color gris indica que no existe información para ese territorio.
+    </p>
+    <p>Al dar click a cada una de las gráficas, aparecerá más información. Y es posible descargar las gráficas haciendo click en el botón de descarga.</p>
+  </div>
   <div class="h-screen">
     <iframe class="w-full h-full" src="https://datasketch.shinyapps.io/oposicion-politica-app/" frameborder="0"></iframe>
   </div>
