--- a/layouts/index.html
+++ b/layouts/index.html
@@ -44,7 +44,7 @@
 <!---->
 <section class="py-12 bg-white" id="visualiza">
   <h3 class="text-3xl text-indigo-dye uppercase font-black lg:text-4xl text-center">Explora los datos</h3>
-  <details class="text-center mt-2" open>
+  <details class="text-center mt-2">
     <summary class="uppercase bg-tart-orange text-white rounded font-bold text-sm px-3 py-2 inline-block">
       Cómo se usa
     </summary>
