--- a/layouts/index.html
+++ b/layouts/index.html
@@ -65,7 +65,7 @@
       </div>
     </div>
   </details>
-  <div class="mt-4" style="height: 200vh">
+  <div class="mt-4 embed">
     <iframe class="w-full h-full" src="https://datasketch.shinyapps.io/oposicion-politica-app/" frameborder="0"></iframe>
   </div>
 </section>
