--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,7 +17,7 @@
   {{ end }}
 </head>
 <body class="antialiased font-barlow">
-  {{ partial "navbar.html" . }}
+  <!-- {{ partial "navbar.html" . }} -->
   <main class="flex-grow">
     {{ block "main" . }}{{ end }}
   </main>
